# lexical-calculator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/viewModels/Lexer/: lexer.cpp  lexer.h
src/viewModels/Tokenizer/: lexer.cpp  lexer.h
src/viewModels/Types/: enums.h  structs.h
viewModels/Tokenizer/: lexer.cpp  lexer.h
viewModels/Types/: structs.h
